--- a/style.css
+++ b/style.css
@@ -4,13 +4,14 @@ body {
   line-height: 1;
 }
 
-textarea{
+input{
   background: transparent;
   border: none;
   resize: none;
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  width: 75%
 }
 
 .jumbotron {
@@ -33,7 +34,7 @@ textarea{
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;;
+  width: 70%
 }
 
 .hour {
@@ -63,6 +64,7 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  float: right;
 }
 
 .saveBtn i:hover {
